--- a/_config.yml
+++ b/_config.yml
@@ -30,12 +30,11 @@ gems:
 exclude:
   - Gemfile
   - Gemfile.lock
-  - css/bootstrap.min.css
-  - js/jquery.min.js
-  - js/bootstrap.min.js
 
 galimgdir: /images
 
 contact_form: "https://formspree.io/contact@sutfinartindustries.com"
 
 breadcrumb_list: [1, 2, 3, 4, 5, 6, 7, 8, 9]
+
+env: "prod"
