--- a/_config.yml
+++ b/_config.yml
@@ -25,11 +25,12 @@ github_username:  sutfinartindustries
 # Build settings
 markdown: kramdown
 # theme: minima
-gems:
+plugins:
   - jekyll-feed
 exclude:
   - Gemfile
   - Gemfile.lock
+  - vendor
 
 galimgdir: /images
 
