change murals menu to mural gallery with new film-strip layout

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -11,8 +11,8 @@
       subhref: "/visual-art/illustrations/"
     - subtitle: "Ink"
       subhref: "/visual-art/ink/"
-    - subtitle: "Murals"
-      subhref: "/visual-art/murals/"
+    - subtitle: "Mural Gallery"
+      subhref: "/visual-art/mural-gallery/"
     - subtitle: "Painting"
       subhref: "/visual-art/painting/"
 
