--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -5,19 +5,19 @@
 - title: "Visual Art"
   href: "/visual-art/"
   subcategories:
-    - subtitle: "Design and Build"
-      subhref: "/visual-art/design/"
-    - subtitle: "Illustrations"
-      subhref: "/visual-art/illustrations/"
-    - subtitle: "Ink"
-      subhref: "/visual-art/ink/"
     - subtitle: "Mural Gallery"
       subhref: "/visual-art/mural-gallery/"
-    - subtitle: "Painting"
-      subhref: "/visual-art/painting/"
+    - subtitle: "Paintings on Panel"
+      subhref: "/visual-art/paintings-on-panel/"
+    - subtitle: "Commissions"
+      subhref: "/visual-art/commissions/"
+    - subtitle: "Fine Arts"
+      subhref: "/visual-art/fine-arts/"
+    - subtitle: "Graphic Art & Design"
+      subhref: "/visual-art/graphic-art-and-design/"
 
-- title: "Projects"
-  href: "/projects/"
+- title: "Projects & Branding"
+  href: "/projects-and-branding/"
 
-- title: "Custom Signs"
-  href: "/custom-signs/"
+- title: "Custom Signs & Cutouts"
+  href: "/custom-signs-and-cutouts/"
